--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -301,12 +301,12 @@
                     class="card__icon"
                     src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
                 /></a>
-                <a href="/" target="_blank"
+                <!-- <a href="/" target="_blank"
                   ><img
                     class="card__icon"
                     src="assets/external-link.svg"
                     alt="external link"
-                /></a>
+                /></a> -->
               </div>
             </div>
             <div class="card__description">
