project screens adding

--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -23,7 +23,7 @@
         </picture>
         <h2>About me</h2>
         <p class="header__text">
-            Full-Stack Developer at Qtrams, committed to integrity, strong leadership, and tackling challenges with confidence.
+            Full-Stack Developer, committed to integrity, strong leadership, and tackling challenges with confidence.
           </p>
           <div class="header__links">
             <a href="https://github.com/dashboard" target="_blank">
@@ -49,9 +49,10 @@
     </header>
     <main>
       <h2>My work</h2>
+      <div class="w3-container w3-center w3-animate-bottom">
       <div class="main__cards">
         <div class="card">
-          <div class="card__screenshot">Project 1</div>
+          <div class="card__screenshot"><img src="./assets/signup.png" alt="Signup illustration"></div>
           <div class="card__information">
             <div class="information__top">
               <h3>SignUp-Form</h3>
@@ -75,7 +76,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="card__screenshot">Project 2</div>
+          <div class="card__screenshot"><img src="assets/admin.png" alt=""></div>
           <div class="card__information">
             <div class="information__top">
               <h3>Admin-Dashboard</h3>
@@ -99,7 +100,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="card__screenshot">Project 3</div>
+          <div class="card__screenshot"><img src="assets/library.png" alt=""></div>
           <div class="card__information">
             <div class="information__top">
               <h3>Library</h3>
@@ -123,7 +124,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="card__screenshot">Project 4</div>
+          <div class="card__screenshot"><img src="assets/Tic_tac_toe.png" alt=""></div>
           <div class="card__information">
             <div class="information__top">
               <h3>Tic-Tac-Toe</h3>
@@ -147,7 +148,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="card__screenshot">Project 5</div>
+          <div class="card__screenshot"><img src="assets/todolist.png" alt=""></div>
           <div class="card__information">
             <div class="information__top">
               <h3>Todo-List</h3>
@@ -171,7 +172,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="card__screenshot">Project 6</div>
+          <div class="card__screenshot"><img src="assets/restaurant.png" alt=""></div>
           <div class="card__information">
             <div class="information__top">
               <h3>Restaurant</h3>
@@ -195,7 +196,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="card__screenshot">Project 7</div>
+          <div class="card__screenshot"><img src="assets/weather.png" alt=""></div>
           <div class="card__information">
             <div class="information__top">
               <h3>Weather</h3>
@@ -219,7 +220,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="card__screenshot">Project 8</div>
+          <div class="card__screenshot"><img src="assets/recursion.png" alt=""></div>
           <div class="card__information">
             <div class="information__top">
               <h3>Recursion</h3>
@@ -243,7 +244,7 @@
           </div>
         </div>
                 <div class="card">
-          <div class="card__screenshot">Project 9</div>
+          <div class="card__screenshot"><img src="assets/linkedlist.png" alt=""></div>
           <div class="card__information">
             <div class="information__top">
               <h3>Linked_List</h3>
@@ -267,7 +268,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="card__screenshot">Project 10</div>
+          <div class="card__screenshot"><img src="assets/hashmap.png" alt=""></div>
           <div class="card__information">
             <div class="information__top">
               <h3>Hashmap</h3>
@@ -291,31 +292,31 @@
           </div>
         </div>
         <div class="card">
-          <div class="card__screenshot">Project 11</div>
+          <div class="card__screenshot"><img src="assets/battleships.png" alt=""></div>
           <div class="card__information">
             <div class="information__top">
-              <h3>Binary Search Tree</h3>
+              <h3>Battleships</h3>
               <div class="card__links">
-                <a href="https://github.com/boyezg/qtrams_practice/tree/main/binary_tree" target="_blank"
+                <a href="https://github.com/boyezg/battleship" target="_blank"
                   ><img
                     class="card__icon"
                     src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
                 /></a>
-                <!-- <a href="/" target="_blank"
+                <a href="https://boyezg.github.io/battleship/public/index.html" target="_blank"
                   ><img
                     class="card__icon"
                     src="assets/external-link.svg"
                     alt="external link"
-                /></a> -->
+                /></a>
               </div>
             </div>
             <div class="card__description">
-              Created a sorted tree structure to enable efficient searching, insertion, and deletion.
+              Created a strategic game featuring drag-and-drop functionality for ship arrangement and an accessible game guide.
             </div>
           </div>
         </div>
         <div class="card">
-          <div class="card__screenshot">Project 12</div>
+          <div class="card__screenshot"><img src="assets/knight.png" alt=""></div>
           <div class="card__information">
             <div class="information__top">
               <h3>Knight's Travails</h3>
@@ -338,6 +339,7 @@
             </div>
           </div>
         </div>
+      </div>
       </div>
     </main>
     <footer>
