--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="homepage.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia&effect=fire">
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
@@ -19,7 +20,7 @@
         <picture class="header__portrait">
           <source srcset="./assets/boyez1.jpg" media="(min-width: 700px)">
           <img src="./assets/boyez1.jpg" alt="not found" />
-          <h1 class="name">Boyez Gollapalli</h1>
+          <h1 id="name" class="font-effect-fire">Boyez Gollapalli</h1>
         </picture>
         <h2>About me</h2>
         <p class="header__text">
