--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -33,6 +33,13 @@
               src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
                 />
             </a>
+            <a href="https://wa.me/917093105042?text=Hello%20I%20need%20more%20information
+            " target="_blank">
+              <img
+                class="header__logo"
+                src="./assets/whatsapp.svg"
+              />
+            </a>
             <a href="https://www.linkedin.com/in/boyezgollapalli" target="_blank">
                 <img
                 class="header__logo"
@@ -368,6 +375,13 @@
                     class="footer__logo"
                     src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
                 />
+            </a>
+            <a href="https://wa.me/917093105042?text=Hello%20I%20need%20more%20information
+            " target="_blank">
+              <img
+                class="footer__logo"
+                src="./assets/whatsapp.svg"
+              />
             </a>
             <a href="https://www.linkedin.com/in/boyezgollapalli" target="_blank">
                 <img
