--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -347,6 +347,78 @@
             </div>
           </div>
         </div>
+        <div class="card">
+          <div class="card__screenshot"><img src="assets/cvproject.png" alt=""></div>
+          <div class="card__information">
+            <div class="information__top">
+              <h3>CV-Project</h3>
+              <div class="card__links">
+                <a href="https://github.com/boyezg/cv-project" target="_blank"
+                  ><img
+                    class="card__icon"
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                /></a>
+                <a href="https://boyezg.github.io/cv-project/" target="_blank"
+                  ><img
+                    class="card__icon"
+                    src="assets/external-link.svg"
+                    alt="external link"
+                /></a>
+              </div>
+            </div>
+            <div class="card__description">
+                An intuitive interface for managing user data and system configurations, built for efficiency and scalability.
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card__screenshot"><img src="assets/memorycard.png" alt=""></div>
+          <div class="card__information">
+            <div class="information__top">
+              <h3>Memory-Card</h3>
+              <div class="card__links">
+                <a href="https://github.com/boyezg/memory-card" target="_blank"
+                  ><img
+                    class="card__icon"
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                /></a>
+                <a href="https://boyezg.github.io/memory-card/" target="_blank"
+                  ><img
+                    class="card__icon"
+                    src="assets/external-link.svg"
+                    alt="external link"
+                /></a>
+              </div>
+            </div>
+            <div class="card__description">
+                An intuitive interface for managing user data and system configurations, built for efficiency and scalability.
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card__screenshot"><img src="assets/shopping.png" alt=""></div>
+          <div class="card__information">
+            <div class="information__top">
+              <h3>Shopping-Project</h3>
+              <div class="card__links">
+                <a href="https://github.com/boyezg/shopping-project" target="_blank"
+                  ><img
+                    class="card__icon"
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                /></a>
+                <a href="https://boyezg.github.io/shopping-project/" target="_blank"
+                  ><img
+                    class="card__icon"
+                    src="assets/external-link.svg"
+                    alt="external link"
+                /></a>
+              </div>
+            </div>
+            <div class="card__description">
+                An intuitive interface for managing user data and system configurations, built for efficiency and scalability.
+            </div>
+          </div>
+        </div>
       </div>
       </div>
     </main>
