--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/icon" href="./assets/favicon.ico">
     <link rel="stylesheet" href="homepage.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
