--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -368,7 +368,7 @@
               </div>
             </div>
             <div class="card__description">
-                An intuitive interface for managing user data and system configurations, built for efficiency and scalability.
+              A React application for creating professional CVs with sections for general information, education, and experience, featuring editable forms and dynamic previews.
             </div>
           </div>
         </div>
@@ -392,7 +392,7 @@
               </div>
             </div>
             <div class="card__description">
-                An intuitive interface for managing user data and system configurations, built for efficiency and scalability.
+              An interactive game where players match card pairs, testing their memory and improving concentration through progressively challenging levels.
             </div>
           </div>
         </div>
@@ -416,7 +416,7 @@
               </div>
             </div>
             <div class="card__description">
-                An intuitive interface for managing user data and system configurations, built for efficiency and scalability.
+              A React-based e-commerce project with a functional cart system, dynamic product listing, and price calculations for an immersive shopping experience.
             </div>
           </div>
         </div>
